--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "private": true,
     "dependencies": {
+        "@angular-architects/native-federation": "^21.0.4",
         "@angular/animations": "~14.0.0",
         "@angular/cdk": "~14.0.0",
         "@angular/common": "~14.0.0",
